--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <title>Đăng nhập</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Thêm Google Sign-In API -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
     <div class="login-container">
         <h2>Đăng nhập</h2>
         <input type="text" id="employeeId" placeholder="Mã nhân viên" required>
         <input type="password" id="password" placeholder="Mật khẩu" required>
-        <button onclick="login()">Đăng nhập</button>
+        <button onclick="checkLogin()">Đăng nhập</button>
         <p id="error" style="color: red;"></p>
+        <!-- Nút đăng nhập bằng Google -->
+        <div id="g_id_onload"
+             data-client_id="490612546849-1vqphpttqqislvdc1e9eb7jdjt8lrbdi.apps.googleusercontent.com"
+             data-callback="handleCredentialResponse"
+             data-auto_prompt="false">
+        </div>
+        <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline" data-text="sign_in_with" data-shape="rectangular" data-logo_alignment="left"></div>
     </div>
     <script src="script.js"></script>
 </body>
