--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,7 @@
         <button onclick="showTab('report')">Thống kê & Báo cáo</button>
         <button onclick="logout()">Đăng xuất</button>
     </div>
-    <div id="input" class="tab-content" style="display: none;">
+    <div id="input" class="tab-content" style="display: block;">
         <h2>Nhập liệu giao dịch</h2>
         <form id="transactionForm">
             <div class="form-row">
@@ -91,7 +91,7 @@
             <div class="form-row">
                 <button type="button" onclick="addTransaction()">Thêm giao dịch</button>
                 <button type="button" onclick="updateTransaction()" id="updateBtn" style="display: none;">Sửa</button>
-                <button type="button" onclick="deleteTransaction()" id="deleteBtn" style="display: none;">Xóa</button>
+                <button type="button" onclick="confirmDelete(currentTransactionId)" id="deleteBtn" style="display: none;">Xóa</button>
                 <button type="button" onclick="searchTransactions()">Tìm kiếm</button>
             </div>
         </form>
