NGÀY BẮT ĐẦU VÀ NGÀY KẾT THÚC

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <input type="number" id="months" placeholder="Số tháng đăng ký" min="1" required>
             <input type="text" id="start-date" placeholder="Ngày bắt đầu (dd/mm/yyyy)" required>
             <input type="text" id="end-date" placeholder="Ngày kết thúc" readonly>
+            <button onclick="testForm()">Kiểm tra</button>
             <input type="number" id="devices" placeholder="Số thiết bị" min="1" required>
             <select id="software" required></select>
             <select id="package" required></select>
