--- a/index.html
+++ b/index.html
@@ -1,24 +1,106 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Transaction Webapp</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="https://apis.google.com/js/api.js"></script>
+  <meta charset="UTF-8" />
+  <title>Đăng nhập hệ thống</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f4;
+      display: flex;
+      height: 100vh;
+      align-items: center;
+      justify-content: center;
+    }
+    .login-box {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      width: 300px;
+    }
+    .login-box h2 {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    .login-box input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+    .login-box button {
+      width: 100%;
+      padding: 10px;
+      background: #007BFF;
+      border: none;
+      color: white;
+      font-weight: bold;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .login-box .error {
+      color: red;
+      font-size: 14px;
+      text-align: center;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
-  <div id="app"></div> <!-- Container để hiển thị giao diện -->
-  <script src="js/auth/initClient.js"></script>
-  <script src="js/auth/login.js"></script>
-  <script src="js/ui/loadTemplate.js"></script>
-  <script src="js/main.js"></script>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      initClient(); // Khởi tạo Google API
-      loadTemplate('templates/login.html', 'app'); // Tải giao diện đăng nhập
-      login(); // Gắn sự kiện đăng nhập
+
+<div class="login-box">
+  <h2>Đăng nhập</h2>
+  <input type="text" id="maNhanVien" placeholder="Mã nhân viên" />
+  <input type="password" id="matKhau" placeholder="Mật khẩu" />
+  <button onclick="dangNhap()">Đăng nhập</button>
+  <div class="error" id="thongBao"></div>
+</div>
+
+<script>
+  const URL_API = 'https://script.google.com/macros/s/AKfycby4zyKgL5_nzsIGXvWGmddmJUWX5G_KDGOE8KEAhoF6N_KXTIzVVuUpx5MsYPFpjH7Q/exec'; // ← Dán URL Web App tại đây
+
+  function dangNhap() {
+    const maNhanVien = document.getElementById('maNhanVien').value.trim();
+    const matKhau = document.getElementById('matKhau').value.trim();
+    const thongBao = document.getElementById('thongBao');
+
+    if (!maNhanVien || !matKhau) {
+      thongBao.textContent = 'Vui lòng nhập đầy đủ thông tin.';
+      return;
+    }
+
+    thongBao.textContent = 'Đang kiểm tra...';
+
+    fetch(`${URL_API}?action=login`, {
+      method: 'POST',
+      body: JSON.stringify({ maNhanVien, matKhau })
+    })
+    .then(res => res.json())
+    .then(data => {
+      if (data.success) {
+        // Lưu vào localStorage
+        localStorage.setItem('user', JSON.stringify(data));
+        thongBao.style.color = 'green';
+        thongBao.textContent = 'Đăng nhập thành công!';
+
+        // Chuyển sang trang nhập liệu (ví dụ: main.html)
+        setTimeout(() => {
+          window.location.href = 'main.html';
+        }, 1000);
+      } else {
+        thongBao.style.color = 'red';
+        thongBao.textContent = data.message;
+      }
+    })
+    .catch(err => {
+      thongBao.textContent = 'Lỗi kết nối đến server.';
+      console.error(err);
     });
-  </script>
+  }
+</script>
+
 </body>
 </html>
