--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <div id="login-message" style="margin-top: 10px; color: red;"></div>
   </div>
 
-  <script src="js/login.js"></script>
+  <script src="js/login.v3.js"></script>
 </body>
 </html>
