--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
   <div class="login-container">
     <h2>Đăng nhập hệ thống</h2>
     <input type="text" id="employeeCode" placeholder="Mã nhân viên">
-    <input type="password" id="password" placeholder="Mật khẩu">
+    <div class="password-container">
+  <input type="password" id="password" placeholder="Mật khẩu">
+  <span class="toggle-password" onclick="togglePassword()">👁️</span>
+</div>
+    <script>
+  function togglePassword() {
+    const passwordInput = document.getElementById('password');
+    passwordInput.type = (passwordInput.type === 'password') ? 'text' : 'password';
+  }
+</script>
     <button onclick="handleLogin()">Đăng nhập</button>
     <p id="errorMessage" class="error"></p>
   </div>
