--- a/main.html
+++ b/main.html
@@ -90,5 +90,77 @@
     <p id="errorMessage" style="color: red;"></p>
   </div>
 </body>
+<form id="transactionForm">
+  <!-- Cột 1 -->
+  <div>
+    <label>Loại giao dịch:</label>
+    <select id="transactionType" required>
+      <option value="">-- Chọn loại --</option>
+      <option value="Mua">Mua hàng</option>
+      <option value="Nâng gói">Nâng gói</option>
+      <option value="Hoàn">Hoàn hàng</option>
+    </select>
+  </div>
+
+  <div>
+    <label>Số tháng đăng ký:</label>
+    <input type="number" id="duration" placeholder="VD: 3" />
+  </div>
+
+  <div>
+    <label>Ngày bắt đầu:</label>
+    <input type="date" id="startDate" />
+  </div>
+
+  <div>
+    <label>Ngày kết thúc:</label>
+    <input type="date" id="endDate" />
+  </div>
+
+  <div>
+    <label>Doanh thu:</label>
+    <input type="number" id="revenue" placeholder="VD: 300000" />
+  </div>
+
+  <div class="extra-wide">
+    <label>Ghi chú:</label>
+    <textarea id="note" placeholder="Ghi chú nếu có..."></textarea>
+  </div>
+
+  <!-- Cột 2 -->
+  <div>
+    <label>Tên khách hàng:</label>
+    <input type="text" id="customerName" />
+  </div>
+
+  <div>
+    <label>Email:</label>
+    <input type="email" id="email" />
+  </div>
+
+  <div class="extra-wide">
+    <label>Liên hệ:</label>
+    <input type="text" id="phone" />
+  </div>
+
+  <div>
+    <label>Số thiết bị:</label>
+    <input type="number" id="deviceCount" />
+  </div>
+
+  <!-- Cột 3 -->
+  <div>
+    <label>Tên phần mềm:</label>
+    <input type="text" id="softwareName" />
+  </div>
+
+  <div>
+    <label>Gói phần mềm:</label>
+    <input type="text" id="packageName" />
+  </div>
+
+  <!-- Nút -->
+  <button type="submit">Lưu giao dịch</button>
+</form>
 
 </html>
